sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_4.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res1
---
SyncFilesToWorkspaceResponse
