sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-10.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res5
---
SyncFilesToWorkspaceResponse
