sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-11.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res5_changelist
---
GetWorkspaceChangelistResponse {
    items: [
        GetWorkspaceChangelistResponseItem {
            file_path: "foo",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
        GetWorkspaceChangelistResponseItem {
            file_path: "foo/test.txt",
            blob_id: Some(
                "blob2",
            ),
            deleted: false,
            file_type: File,
        },
    ],
}
