sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-13.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res5_changelist
---
GetWorkspaceChangelistResponse {
    items: [
        GetWorkspaceChangelistResponseItem {
            file_path: "foo",
            blob_id: None,
            deleted: false,
            file_type: Dir,
        },
        GetWorkspaceChangelistResponseItem {
            file_path: "foo/test.txt",
            blob_id: Some(
                "qKp04Jj225gU8Bx-Ea54VukNTUn6waoWbO0pggo2587XBb_If0P0bRCCkCcNXQGm",
            ),
            deleted: false,
            file_type: File,
        },
    ],
}
