sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-14.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res7
---
CreateWorkspaceResponse {
    workspace_id: "RyzawxaeTSSPDjBw18IAEjPhlwBuQf3JqHADlJgA-tiFggOynK9dw2PYDa2WPRp1",
}
