sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-16.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res10
---
GetCommitHistoryResponse {
    items: [
        GetCommitHistoryResponseItem {
            commit_id: "U7NX3546S_DA6LRo-dvu8BMDmsMiTDtadeK34NwtJrcJqgXMohR0L4e--3y75Xxb",
            commit_rank: 3,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
        GetCommitHistoryResponseItem {
            commit_id: "d_w33KNpXGSvhsSKrF-BV5_mAr8SZnx5w--6rbSwFN1fXzS4pjfGg2zqsnSx0t-p",
            commit_rank: 2,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
        GetCommitHistoryResponseItem {
            commit_id: "khfuJHSjtHtshJO67U1NxVN3wTPIDf7fB3Qv6p_VSrYz2FyakmMIBml8K34p6drO",
            commit_rank: 1,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
        GetCommitHistoryResponseItem {
            commit_id: "CnDOE6ijtGMkqxcGIFQpOM5Q6T-uhf2nN3eIomooFdcs81ku7i_JYBcA8-9r6cSE",
            commit_rank: 0,
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
        },
    ],
}
