sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-17.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res8_dir_files_1
---
Found {
    items: [
        ReadDirResponseItem {
            file_path: "foo",
            file_name: "foo",
            file_type: Dir,
            deleted_at: None,
        },
    ],
}
